# JajankeN

./: .gitignore  README.md
Game/Assets/Plugins/WebGL/: React.jslib
Game/Assets/Scenes/: SampleScene.unity
Game/Assets/Scripts/: EventHandler.cs
Game/ProjectSettings/: ProjectSettings.asset
aws/: .projenrc.js  cdk.context.json  package.json
aws/src/: main.ts
frontend/: package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src-tauri/: tauri.conf.json
frontend/src/Api/: Auth.ts  makeRequest.ts
frontend/src/Components/ActionButton/: index.tsx
frontend/src/Components/CenteredModal/: index.tsx  styles.tsx
frontend/src/Components/Input/: index.tsx
frontend/src/Components/LoginForm/: index.tsx
frontend/src/Components/LogoWrapper/: index.tsx  styles.tsx
frontend/src/Pages/: Auth.tsx  Game.tsx
frontend/src/test/GameBuild/: index.html
match-app/: Cargo.toml  build.rs
match-app-deprecated/: build.rs
match-app-deprecated/proto/: jajanken.proto
match-app-deprecated/src/: client.rs  server.rs
match-app-deprecated/src/entities/: match_state.rs  mod.rs
match-app-deprecated/src/helpers/: match_state.rs  mod.rs  movement_checker.rs  player_map.rs  token.rs
match-app-deprecated/src/services/: match_service.rs  mod.rs
match-app/proto/: jajanken.proto
match-app/src/: client.rs  server.rs
match-app/src/entities/: player.rs
match-app/src/helpers/: mod.rs  player_map.rs  token.rs
match-app/src/services/: match_service.rs  mod.rs
server/: Cargo.toml
server/src/: main.rs
server/src/controllers/: user.rs
server/src/controllers/user/: create_user.rs  get_user.rs  login_user.rs  mod.rs
server/src/models/: user.rs
server/src/services/: database.rs  encryption.rs  mod.rs
server/src/services/auth/: jwt.rs  mod.rs  users_sessions.rs
server/src/utils/: mod.rs
server/src/utils/RequestParams/: Token.rs  mod.rs
(+1 files in other folders)
